# AIGC

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  test.cpp  test.sln  test.vcxproj  update.todo
AIGC/: AIGC.sln  AIGC.vcxproj  aigc.sln  aigc.vcxproj  main.cpp
AIGC/ProWin/: ProWin.sln  ProWin.vcxproj  ProWin.vcxproj.filters
AIGC/include/: AESHelper.h  AIGCBase.h  Base64Helper.h  CRCHelper.h  ChineseHelper.h  DESHelper.h  DownloadHelper.h  EmailHelper.h  FTPHelper.h  FileHelper.h  GithubHelper.h  HashHelper.h  HttpHelper.h  JsonHelper.h  LogHelper.h  M3u8Helper.h  MD5Helper.h  MathHelper.h  MutexHelper.h  PathHelper.h  PropertyHelper.h  QueueHelper.h  RWLockHelper.h  RandomHelper.h  SQLiteHelper.h  SocketHelper.h  StringHelper.h  SystemHelper.h  TCPClientHelper.h  TCPServerHelper.h  TaskHelper.h  ThreadHelper.h  ThreadPoolHepler.h  TidalClient.h  TidalModel.h  TimeHelper.h  TypeHelper.h
AIGC/src/: CRCHelper.cpp  FileHelper.cpp  GithubHelper.cpp  HashHelper.cpp  HttpHelper.cpp  HttpHelper2.cpp  JsonHelper.cpp  LogHelper.cpp  Main.cpp  MathHelper.cpp  MutexHelper.cpp  PathHelper.cpp  PropertyHelper.cpp  QueueHelper.cpp  RandomHelper.cpp  SocketHelper.cpp  StringHelper.cpp  SystemHelper.cpp  TCPClientHepler.cpp  ThreadPoolHelper.cpp  TimeHelper.cpp  TypeHelper.cpp
AIGC/tidal/: TidalClient.cpp  TidalClient.h  TidalEnum.h  TidalModel.h
include/aigc/: AIGCDef.h
include/aigc/common/: FileHelper.h  HashHelper.h  JsonHelper.h  MathHelper.h  PathHelper.h  QueueHelper.h  RandomHelper.h  StringHelper.h  ThreadPoolHepler.h  TimeHelper.h
include/aigc/net/: HttpHelper.h  (+6 more)
(+16 files in other folders)
